fix lỗi scrollBar #91

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 
 body {
   /* padding: 20px; */
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
