--- a/src/components/Admin/assets/admin.scss
+++ b/src/components/Admin/assets/admin.scss
@@ -14,7 +14,7 @@
 
       }
       .admin-main{
-
+        height: calc(100vh - 40px);
       }
     }
 }
